# C-projects

./: README.md
hw01/: CMakeLists.txt  assignment.ad  cut.h  main.c  testErrors.c  testErrors.h  tests.c  toxOperations.c  toxOperations.h
hw02/: main.c  minesweeper.c
hw03/: CMakeLists.txt  capture.c  capture.h  demo.c  nft.c  pcap.c  pcap.h
hw03/tests/: cut.h  tests-e2e.c  tests-unit.c
hw04/: CMakeLists.txt  ebnf.txt  main.c  managed_string.c  managed_string.h  parser.c  parser.h  vector.c  vector.h  xparser.c  xparser.h  xpath.c  xpath.h
hw04/tests/: cut_main_runner.c  tests.c  utils_for_tests.c  utils_for_tests.h
